Comment out lists of score

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                     <button type="reset" class="refresh-btn">Refresh</button>
                 </div>
                 <div id="main-list" class="main-lists">
-                    <div class="eachScore white-bg">
+                    <!--<div class="eachScore white-bg">
                         <p class="users user-1">Name: 100</p>
                     </div>
                     <div class="eachScore grey-bg">
@@ -32,7 +32,7 @@
                     </div>
                     <div class="eachScore white-bg">
                         <p class="users user-5">Name: 125</p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <div class="toadd-list">
