--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="toadd-list">
                 <h2 class="add-score">Add your score</h2>
-                <form action="#" method="get" id="form" class="forms">
+                <form id="form" class="forms">
                     <label for="name"></label>
                     <input type="text" id="name" class="text-inputs inputs" name="name" placeholder="Your name" required>
                     <label for="score"></label>
