Add id to refresh button

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <div class="leaderboard-lists">
                 <div class="refresh">
                     <h2 class="recent-score">Recent scores</h2>
-                    <button type="reset" class="refresh-btn">Refresh</button>
+                    <button type="reset" id="refresh-btn" class="refresh-btn">Refresh</button>
                 </div>
                 <div id="main-list" class="main-lists">
                     <!--<div class="eachScore white-bg">
