Add success result to form

--- a/src/index.html
+++ b/src/index.html
@@ -18,26 +18,13 @@
                     <button type="reset" id="refresh-btn" class="refresh-btn">Refresh</button>
                 </div>
                 <div id="main-list" class="main-lists">
-                    <!--<div class="eachScore white-bg">
-                        <p class="users user-1">Name: 100</p>
-                    </div>
-                    <div class="eachScore grey-bg">
-                        <p class="users user-2">Name: 20</p>
-                    </div>
-                    <div class="eachScore white-bg">
-                        <p class="users user-3">Name: 50</p>
-                    </div>
-                    <div class="eachScore grey-bg">
-                        <p class="users user-4">Name: 78</p>
-                    </div>
-                    <div class="eachScore white-bg">
-                        <p class="users user-5">Name: 125</p>
-                    </div>-->
+                    <!-- Leaderboard users and scores will be added -->
                 </div>
             </div>
             <div class="toadd-list">
                 <h2 class="add-score">Add your score</h2>
                 <form id="form" class="forms">
+                    <p id="res" class="result-post"></p>
                     <label for="name"></label>
                     <input type="text" id="name" class="text-inputs inputs" name="name" placeholder="Your name" required>
                     <label for="score"></label>
